[package]
name = "openssl_provider_forge"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pretty_env_logger"]
pretty_env_logger = ["dep:pretty_env_logger"]


[dependencies]
anyhow = "1.0.94"
bitflags = "2.6.0"
function_name = "0.3"
libc = "0.2"
log = "0.4"
num-traits = "0.2"
pretty_env_logger = { version = "0.5", optional = true }

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
