[package]
name = "openssl_provider_forge"
version = "0.8.2-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
bitflags = "2.6.0"
function_name = "0.3"
libc = "0.2"
log = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"

[dev-dependencies]
env_logger = "0.11.6"

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
